__glXDRIscreenProbe: Use drmOpen/CloseOnce.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=9275 . Based on patch from
Alan Swanson.